add preset-env to use latest javascript

--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "homepage": "https://github.com/johuder33/webpack-0-100#readme",
   "devDependencies": {
     "@babel/core": "^7.16.7",
+    "@babel/preset-env": "^7.16.7",
     "babel-loader": "^8.2.3",
     "html-webpack-plugin": "^5.5.0",
     "webpack": "^5.65.0",
